--- a/src/00_geolocalization.ipynb
+++ b/src/00_geolocalization.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": null,
    "id": "133fc1eb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import utils\n",
+    "import src.utils as utils\n",
     "import pandas as pd\n",
     "import geopandas as gpd"
    ]
