--- a/src/00_geolocalization.ipynb
+++ b/src/00_geolocalization.ipynb
@@ -9,7 +9,8 @@
    "source": [
     "import src.utils as utils\n",
     "import pandas as pd\n",
-    "import geopandas as gpd"
+    "import geopandas as gpd\n",
+    "#TODO"
    ]
   },
   {
