test commit finished

--- a/src/00_geolocalization.ipynb
+++ b/src/00_geolocalization.ipynb
@@ -9,8 +9,7 @@
    "source": [
     "import src.utils as utils\n",
     "import pandas as pd\n",
-    "import geopandas as gpd\n",
-    "#TODO"
+    "import geopandas as gpd"
    ]
   },
   {
