order by nearest_* columns

--- a/src/02_price_analysis.ipynb
+++ b/src/02_price_analysis.ipynb
@@ -1106,6 +1106,61 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "b8caa36c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#TODO: fix seed to be stable per area_name_en\n",
+    "\n",
+    "import hashlib\n",
+    "import numpy as np\n",
+    "\n",
+    "poi_cols = [c for c in df_unit.columns if c.startswith(\"nearest_\")]\n",
+    "\n",
+    "def stable_seed(value):\n",
+    "    digest = hashlib.md5(str(value).encode(\"utf-8\")).digest()\n",
+    "    return int.from_bytes(digest[:4], \"little\")\n",
+    "\n",
+    "def build_area_poi_score(area_df, poi_cols, seed):\n",
+    "    rng = np.random.default_rng(seed)\n",
+    "    per_col_maps = {}\n",
+    "    for col in poi_cols:\n",
+    "        pois = area_df[col].dropna().unique()\n",
+    "        if len(pois) == 0:\n",
+    "            per_col_maps[col] = {}\n",
+    "            continue\n",
+    "        per_col_maps[col] = dict(zip(pois, rng.random(len(pois))))\n",
+    "\n",
+    "    scores = np.zeros(len(area_df))\n",
+    "    for col in poi_cols:\n",
+    "        col_scores = area_df[col].map(per_col_maps[col]).fillna(0.0)\n",
+    "        scores += col_scores.to_numpy()\n",
+    "\n",
+    "    if poi_cols:\n",
+    "        scores = scores / len(poi_cols)\n",
+    "\n",
+    "    scores += rng.random(len(area_df)) * 1e-3\n",
+    "    return pd.Series(scores, index=area_df.index)\n",
+    "\n",
+    "df_unit[\"poi_order_score\"] = (\n",
+    "    df_unit.groupby(\"area_name_en\", group_keys=False)\n",
+    "    .apply(lambda g: build_area_poi_score(g, poi_cols, stable_seed(g.name)))\n",
+    ")\n",
+    "\n",
+    "df_unit[\"poi_order_rank\"] = (\n",
+    "    df_unit.groupby(\"area_name_en\")[\"poi_order_score\"]\n",
+    "    .rank(method=\"first\")\n",
+    ")\n",
+    "\n",
+    "example_area = df_unit[\"area_name_en\"].sample(1, random_state=42).iloc[0]\n",
+    "df_unit[df_unit[\"area_name_en\"] == example_area]\\\n",
+    "    .sort_values(\"poi_order_rank\")\\\n",
+    "    .head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 60,
    "id": "4b552c16",
    "metadata": {},
